refact code, add user login